--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "whorl",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A simple text spinning DSL",
-  "main": "index.js",
-  "repository": " ",
+  "main": "build/index.js",
+  "repository": "https://github.com/HatchApps/whorl",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "NODE_ENV=production rollup -c"
   },
   "devDependencies": {
+    "babel-jest": "^22.4.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "rollup": "^0.59.0",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0"
   },
   "dependencies": {
     "pluralize": "^7.0.0"
